--- a/public/project/views/user/templates/users/profile.view.client.html
+++ b/public/project/views/user/templates/users/profile.view.client.html
@@ -1,7 +1,7 @@
 <div id="site-content">
     <header class="site-header">
         <div class="container">
-            <a href="../../../home.html" id="branding">
+            <a href="../home.html" id="branding">
                 <img src="../../../vendor/images/logo.png" alt="" class="logo">
                 <div class="logo-copy">
                     <h1 class="site-title">Company Name</h1>
@@ -12,9 +12,9 @@
             <div class="main-navigation">
                 <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                 <ul class="menu">
-                    <li class="menu-item"><a href="../../../home.html">Home</a></li>
+                    <li class="menu-item"><a href="../home.html">Home</a></li>
                     <li class="menu-item"><a href="about.html">About</a></li>
-                    <li class="menu-item"><a href="review.html">Movie reviews</a></li>
+                    <li class="menu-item"><a href="../cinema/SearchMovies.view.client.html">Movie reviews</a></li>
                     <li class="menu-item current-menu-item"><a href="login.view.client.html">Join us</a></li>
                     <li class="menu-item"><a href="contact.html">Contact</a></li>
                 </ul> <!-- .menu -->
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="page">
                 <div class="breadcrumbs">
-                    <a href="../../../home.html">Home</a>
+                    <a href="../home.html">Home</a>
                     <span>Profile</span>
                 </div>
 
@@ -40,22 +40,23 @@
                 <!-- note: your server code `avatar_upload.php` will receive `$_FILES['avatar']` on form submission -->
                 <!-- the avatar markup -->
                 <div id="kv-avatar-errors-2" class="center-block"></div>
-                <form class="form form-vertical" action="/avatar_upload.php" method="post" enctype="multipart/form-data">
+                <form class="form form-vertical" action="/api/upload/project" method="post" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="kv-avatar center-block text-center" style="width:200px">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Russia-Portugal_CC2017_%2811%29_%28cropped%29.jpg">
+                                <img ng-src="{{model.user.ProfilePic}}">
                                 <input id="avatar-2" name="avatar-2" type="file" class="file-loading" required>
+                                <button type="submit"    class="btn btn-sucess btn-block">Upload Profile Pic</button>
                             </div>
                         </div>
                         <div class="col-sm-8">
                             <div class="tabbable tabs-below" ng-init="selectedTab = 1;">
                                 <ul class="nav nav-tabs nav-justified">
                                     <li ng-class="{active: selectedTab == 1}">
-                                        <a data-target="#" ng-click="selectedTab = 1;">Profile</a>
+                                        <a data-target="#" ng-click="selectedTab = 1;">Reviews</a>
                                     </li>
                                     <li ng-class="{active: selectedTab == 2}">
-                                        <a data-target="#" ng-click="selectedTab = 2;">Reviews</a>
+                                        <a data-target="#" ng-click="selectedTab = 2;">Profile</a>
                                     </li>
                                     <li ng-class="{active: selectedTab == 3}">
                                         <a data-target="#" ng-click="selectedTab = 3;">Following</a>
@@ -66,26 +67,16 @@
                                 </ul>
 
                                 <div class="tab-content" ng-show="selectedTab == 1">
-                                    <div class="container-fluid">
-                                        <h1>Profile</h1>
-                                        <div ng-repeat="user in model.users">
-                                            <h1><a href="#!/profile/{{model.userId}}/visitor/{{user._id}}"> {{user.username}}</a></h1>
-                                        </div>
-                                        <div class="panel-heading">
-                                            <div class="container-fluid"><h4><b>UserName : {{model.user.username}}</b></h4>
-                                            </div>
-                                            <h5><b>Role : {{model.user.role}}</b></h5>
-                                        </div>
-
-                                        <a class="btn btn-success pull-right" ng-hide="model.flag"  ng-click="model.followUser()" >Follow</a>
-                                        <a class="btn btn-danger pull-right" ng-show="model.flag" ng-click="model.unFollow()" >Unfollow</a>
-                                    </div>
-                                </div>
-
-                                <div class="tab-content" ng-show="selectedTab == 2">
                                     <div ng-repeat="review in model.userGivenReviews">
-                                        <h4>Movie :
-                                            <a href="#!/movies/{{review.tmdbMovieId}}" class="btn btn-link"> {{review.moviename}}</a>
+                                        <a ng-click="model.reviewDelete(review._id)" class="btn btn-danger btn-sm pull-right">
+                                            <i class="fa fa-trash " aria-hidden="true"></i>
+                                        </a>
+                                        <a  href="#!/movies/reviewUpdate/{{review._id}}" class="btn btn-primary btn-sm pull-right">
+                                            <i class="fa fa-pencil " aria-hidden="true"></i>
+                                        </a>
+                                        <h5>Movie :
+                                            <a href="#!/user/movies/{{review.movieID}}" class="btn btn-link"> {{review.moviename}}</a></h5>
+                                            <h4>
                                             <a ng-click="model.reviewDownVote(review._id)">
                                                 <i class="fa fa-thumbs-down pull-right" aria-hidden="true"> {{review.downVotes.length}}</i>
                                             </a>
@@ -93,14 +84,52 @@
                                                 <i class="fa fa-thumbs-up pull-right" aria-hidden="true"> {{review.upVotes.length}}</i>
                                             </a>
                                         </h4>
-                                        <h4>Content :</h4> <p>{{review.description}}</p>
+                                        Description : {{review.description}}
                                         <hr>
                                     </div>
                                 </div>
 
+                                <div class="tab-content" ng-show="selectedTab == 2">
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="username">Username</label>
+                                            <input type="text" ng-model="model.user.username" class="form-control" id="username" placeholder="vaibhav">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="email">Email address</label>
+                                            <input type="email" ng-model="model.user.email" class="form-control" id="email" placeholder="vaibhav@gmail.com">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="first-name">First Name</label>
+                                            <input type="text" ng-model="model.user.firstName" class="form-control" id="first-name" placeholder="vaibhav">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="last-name">Last Name</label>
+                                            <input type="text" ng-model="model.user.lastName" class="form-control" id="last-name" placeholder="karnam">
+                                        </div>
+
+                                    </form>
+                                    <a class="btn btn-danger  btn-block"
+                                       href="#!/login">
+                                        Logout</a>
+                                    <a class="btn btn-default btn-danger btn-block"
+                                       ng-click="model.unregister()"
+                                       role="button">Unregister</a>
+
+                                    <a class="btn btn-default btn-primary btn-block"
+                                       ng-click="model.updateUser()"
+                                       role="button">Update</a>
+                                </div>
+                            </div>
                                 <div class="tab-content" ng-show="selectedTab == 3">
-                                    <div ng-repeat="user in model.users">
-                                        <h1><a href="#!/profile/{{model.userId}}/visitor/{{user._id}}"> {{user.username}}</a></h1>
+
+                                    <a class="btn btn-default btn-primary btn-block"
+                                       ng-click="model.findAllUsers()"
+                                       role="button" id="proflieUser">Find Users to Follow</a>
+                                    <div class="container-fluid" ng-repeat="user in model.users">
+                                        <h4>  Username : <a href="#!/profile/visitor/{{user._id}}">{{user.username}}</a> </h4>
+                                        <h4> Role : {{user.role[0]}}</h4>
+                                        <hr>
                                     </div>
                                     <div class="panel-heading">
                                         <div class="container-fluid"><h4><b>{{model.user.username}}</b> is following:</h4>
@@ -109,7 +138,9 @@
                                     <div class="panel-body">
                                         <div class="alert alert-danger"  ng-if="(model.UsersFollowing).length < 1"> Not following anyone yet !!! </div>
                                         <div ng-repeat="user in model.UsersFollowing">
-                                            <h1><a href="#!/profile/{{user._id}}"> {{user.username}}</a></h1>
+                                            <h4> Username : <a href="#!/profile/visitor/{{user._id}}"> {{user.username}}</a></h4>
+                                            <h4> Role : {{user.role[0]}}</h4>
+                                            <hr>
                                         </div>
                                     </div>
                                 </div>
@@ -121,16 +152,16 @@
                                     <div class="panel-body">
                                         <div class="alert alert-danger"  ng-if="(model.UsersFollowers).length < 1"> No followers yet! </div>
                                         <div ng-repeat="follower in model.UsersFollowers">
-                                            <h1><a href="#!/profile/{{follower._id}}">{{follower.username}}</a></h1>
+                                            <h4> Username : <a href="#!/profile/visitor/{{follower._id}}">{{follower.username}}</a></h4>
+                                            <h4> Role : {{follower.role[0]}}</h4>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </form>
 
-                <!-- the fileinput plugin initialization -->
+            <!-- the fileinput plugin initialization -->
 
             </div>
         </div> <!-- .container -->
@@ -138,64 +169,7 @@
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-2">
-                    <div class="widget">
-                        <h3 class="widget-title">About Us</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia nesciunt saepe cupiditate</p>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="widget">
-                        <h3 class="widget-title">Recent Review</h3>
-                        <ul class="no-bullet">
-                            <li>Lorem ipsum dolor</li>
-                            <li>Sit amet consecture</li>
-                            <li>Dolorem respequem</li>
-                            <li>Invenore veritae</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="widget">
-                        <h3 class="widget-title">Help Center</h3>
-                        <ul class="no-bullet">
-                            <li>Lorem ipsum dolor</li>
-                            <li>Sit amet consecture</li>
-                            <li>Dolorem respequem</li>
-                            <li>Invenore veritae</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="widget">
-                        <h3 class="widget-title">Join Us</h3>
-                        <ul class="no-bullet">
-                            <li>Lorem ipsum dolor</li>
-                            <li>Sit amet consecture</li>
-                            <li>Dolorem respequem</li>
-                            <li>Invenore veritae</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="widget">
-                        <h3 class="widget-title">Social Media</h3>
-                        <ul class="no-bullet">
-                            <li>Facebook</li>
-                            <li>Twitter</li>
-                            <li>Google+</li>
-                            <li>Pinterest</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="widget">
-                        <h3 class="widget-title">Newsletter</h3>
-                        <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Email Address">
-                        </form>
-                    </div>
-                </div>
+
             </div> <!-- .row -->
 
             <div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
