--- a/public/project/style.css
+++ b/public/project/style.css
@@ -82,6 +82,7 @@ h6 {
 abbr[title] {
   border-bottom: 1px dotted; }
 
+
 b,
 strong {
   font-weight: bold; }
@@ -142,6 +143,8 @@ fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em; }
+
+
 
 legend {
   border: 0;
@@ -232,6 +235,9 @@ h1, h2, h3, h4, h5, h6 {
 #homehead
 {
   margin-top: 10px;
+}
+.form-control{
+  width: 100%;
 }
 hr {
   border: none;
@@ -1419,7 +1425,7 @@ ul.arrow {
 
 .main-navigation {
   float: right;
-  background: white;
+  background: bottom;
   border-radius: 5px; }
   .main-navigation .menu-toggle, .main-navigation .menu, .main-navigation .search-form {
     display: inline-block;
@@ -1907,4 +1913,93 @@ button {
   background-color: #fff;
 
   cursor: pointer;
+}
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+  height: 650px;
+}
+
+.add-on .input-group-btn > .btn {
+  border-left-width:0;left:-2px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+/* stop the glowing blue shadow */
+.add-on .form-control:focus {
+  box-shadow:none;
+  -webkit-box-shadow:none;
+  border-color:#cccccc;
+}
+.form-control{width:20%}
+.navbar-nav > li > a {
+  border-right: 1px solid #ddd;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+.navbar-nav:last-child{ border-right:0}
+
+#navbutton
+{
+  background-color: white;
+}
+
+#reviews{
+  margin: 15px;
+}
+
+.tab-content{
+
+  margin: 15px;
+}
+
+#post{
+
+  margin-top: 10px;
+}
+
+.icon-bar{
+  background: black;
+}
+
+#searchbar{
+  width : 100%
+}
+
+#avatar-2
+{
+  width: 100%;
+}
+
+#proflieUser{
+  margin-bottom: 10px;
+}
+
+.form-control{
+  width: 100%;
+  margin-top: 10px;
+}
+
+.carousel-inner
+{
+  height:650px;
+}
+
+.title-header {padding: .75rem 1.25rem; background-color: #f5f5f5; border-bottom: 1px solid transparent;}
+.title-header h3 {font-size: small; margin: 10px; height: 30px}
+.movies {margin-top: 2rem;}
+.img-card {width: 100%; margin-bottom: 35px;}
+.movies {margin-bottom: .60rem;}
+.series {margin-bottom: .60rem;}
+.footer {padding: 1rem 0; margin-top: 2rem; font-size: 80%; text-align: left;}
+.footer p {margin: 0;}
+.footer-links {padding-left: 0; margin-bottom: 1rem;}
+.footer-links li {display: inline-block;}
+.footer a {font-weight: 500; color: inherit;}
+.footer-links li + li {margin-left: 1rem;}
+/* Bug Bootstrap V4.0.6 - Mobile - SCSS _navbar*/
+.navbar {display: block;}
+
+#searchimg{
+  height: 400px;
+  width: 100%;
 }
